# large-records

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  cabal.project.local  large-records.cabal  measure-mem.sh  process.sh
beam-large-records/: CHANGELOG.md  beam-large-records.cabal
beam-large-records/src/Data/Record/: Beam.hs
beam-large-records/src/Data/Record/Beam/: Constraints.hs  DbSettings.hs  FromBackendRow.hs  Internal.hs  Interpretation.hs  Lenses.hs  Skeleton.hs  ZipDatabase.hs  ZipTables.hs
beam-large-records/test/: TestBeamLargeRecords.hs
beam-large-records/test/Test/Record/Beam/: Andres.hs  SimpleSQL.hs  Tutorial1.hs  Tutorial2.hs  Tutorial3.hs  Zipping.hs
hls-plugin-integration/: hls-plugin-integration.cabal
hls-plugin-integration/app/: Main.hs
hls-plugin-integration/lib/: SayYes.hs
large-anon/: CHANGELOG.md  large-anon.cabal
large-anon/fourmolu-preprocessor/: Main.hs
large-anon/src/Data/Record/: Anon.hs  Anonymous.hs
large-anon/src/Data/Record/Anon/: Advanced.hs  Overloading.hs  Plugin.hs  Simple.hs
large-anon/src/Data/Record/Anonymous/: Advanced.hs  Discovery.hs  Existential.hs  Internal.hs  Plugin.hs  Simple.hs  SrcPlugin.hs
large-anon/test/: TestLargeAnon.hs
large-anon/test/Test/Infra/: Discovery.hs  DynRecord.hs  Generics.hs  MarkStrictness.hs
large-anon/test/Test/Infra/DynRecord/: Advanced.hs  Simple.hs
large-anon/test/Test/Prop/Record/: Diff.hs  Model.hs
large-anon/test/Test/Record/Anonymous/: Sanity.hs
large-anon/test/Test/Sanity/: AllFields.hs  Applicative.hs  BlogPost.hs  Casting.hs  CheckCanProject.hs  CheckIsSubRow.hs  Discovery.hs  DuplicateFields.hs  Existential.hs  Generics.hs  HasField.hs  Intersection.hs  Lens.hs  Matching.hs  Merging.hs  OverloadedRecordDot.hs  OverloadedRecordUpdate.hs  PolyKinds.hs  RecordLens.hs  Regression.hs  Simple.hs  TypeLevelMetadata.hs
large-anon/test/Test/Sanity/Existential/: DynRecord.hs
large-anon/test/Test/Sanity/Fourmolu/: OverloadedRecordDot.hs  OverloadedRecordUpdate.hs
large-anon/test/Test/Sanity/Named/: Record1.hs  Record2.hs
large-anon/test/Test/Sanity/RebindableSyntax/: Disabled.hs  Enabled.hs  Tests.hs
large-anon/test/Test/Sanity/SrcPlugin/: WithTypelet.hs  WithoutTypelet.hs
large-generics/: CHANGELOG.md  LICENSE  large-generics.cabal
large-generics/src/Data/Record/: Generic.hs
large-generics/src/Data/Record/Generic/: GHC.hs  JSON.hs  LowerBound.hs  NFData.hs  Rep.hs  SOP.hs  Transform.hs
large-generics/test/: TestLargeGenerics.hs
large-records-benchmarks/: README.md  large-records-benchmarks.cabal
large-records-benchmarks/bench/after/After/Sized/: R000.hs  R0000.hs  R0010.hs  R0020.hs  R0030.hs  R0040.hs  R0050.hs  R0060.hs  R0070.hs  R0080.hs  R0090.hs  R010.hs  R0100.hs  R020.hs  R0200.hs  R030.hs  R0300.hs  R040.hs  R0400.hs  R050.hs  R0500.hs  R060.hs  R0600.hs  R070.hs  R0700.hs  R080.hs  R0800.hs  R090.hs  R0900.hs  R100.hs  R1000.hs
large-records-benchmarks/bench/after/HasNormalForm/Sized/: R000.hs  R010.hs  R020.hs  R030.hs  R040.hs  R050.hs  R060.hs  R070.hs  R080.hs  R090.hs  R100.hs
large-records-benchmarks/bench/after/HigherKinded/Sized/: R000.hs  R010.hs  R020.hs  R030.hs  R040.hs  R050.hs  R060.hs  R070.hs  R080.hs  R090.hs  R100.hs
large-records-benchmarks/bench/before/Before/Sized/: R000.hs  R010.hs  R020.hs  R030.hs  R040.hs  R050.hs  R060.hs  R070.hs  R080.hs  R090.hs  R100.hs
large-records-benchmarks/bench/experiments/Common/: EmptyClass_List.hs  EmptyClass_Tree_Nominal.hs  EmptyClass_Tree_Phantom.hs
large-records-benchmarks/bench/experiments/Common/HListOfSize/: HL010.hs  HL020.hs  HL030.hs  HL040.hs  HL050.hs  HL060.hs  HL070.hs  HL080.hs  HL090.hs  HL100.hs
large-records-benchmarks/bench/experiments/Experiment/: ConstraintFamily_Deep.hs  ConstraintFamily_Shallow.hs  Generics_LR.hs  Generics_SOP.hs
large-records-benchmarks/bench/experiments/Infra/: HList.hs  ShowType.hs  Tree.hs
large-records-benchmarks/bench/large-anon/: Main.hs
large-records-benchmarks/bench/large-anon/Common/RowOfSize/: Row010.hs  Row020.hs  Row030.hs  Row040.hs  Row050.hs  Row060.hs  Row070.hs  Row080.hs  Row090.hs  Row100.hs
large-records-benchmarks/bench/superrecord/: Main.hs
large-records-benchmarks/bench/superrecord/Common/RowOfSize/: Row010.hs  Row020.hs  Row030.hs  Row040.hs  Row050.hs  Row060.hs  Row070.hs  Row080.hs  Row090.hs  Row100.hs
large-records-benchmarks/bench/typelet/: Main.hs
large-records-benchmarks/bench/typelet/Common/FunOfArity/: F010.hs  F020.hs  F030.hs  F040.hs  F050.hs  F060.hs  F070.hs  F080.hs  F090.hs  (+1 more)
large-records-benchmarks/lib/Bench/: HList.hs  TH.hs  Types.hs
large-records-benchmarks/lib/Bench/EvensOfSize/: Evens010.hs  Evens020.hs  Evens030.hs  Evens040.hs  Evens050.hs  Evens060.hs  Evens070.hs  Evens080.hs  Evens090.hs  Evens100.hs
large-records-benchmarks/lib/Bench/TH/: Compat.hs
large-records-benchmarks/lib/Bench/Util/: Criterion.hs
large-records-benchmarks/report/: README.md  all-plots.gnuplot  coresize.csv  nofieldselectors.gnuplot  runtime.csv  timing.csv  update.sh
large-records-benchmarks/test/: TestLargeRecordsBenchmarks.hs
large-records-benchmarks/test/Test/: After.hs  HigherKinded.hs
large-records-benchmarks/test/Test/Experiment/: Generics.hs
large-records-benchmarks/tooling/: ParseCoresize.hs  ParseTiming.hs  Tooling.hs
large-records-plugin/: large-records-plugin.cabal
large-records-plugin/src/Data/Record/: Plugin.hs
large-records-plugin/test/: Spec.hs
typelet/: .gitignore  CHANGELOG.md  README.md  Setup.hs  cabal.project  typelet.cabal
typelet-doctests/: typelet-doctests.cabal
typelet-doctests/src/: DoctestExamplesTypeLet.hs
typelet/benchmarks/: Makefile  benchmarks.gnuplot
typelet/doctest/: DoctestTypeLet.hs
typelet/doctest-examples/: DoctestExamplesTypeLet.hs
typelet/src/: TypeLet.hs
typelet/src/TypeLet/: Plugin.hs  UserAPI.hs
typelet/src/TypeLet/Plugin/: Constraints.hs  GhcTcPluginAPI.hs  NameResolution.hs  Substitution.hs
typelet/test/: TestTypeLet.hs
typelet/test/Test/: Infra.hs  Sanity.hs  WithoutPlugin.hs
(+1038 files in other folders)
