cabal-version:      2.4
name:               hls-plugin-integration
version:            0.1.0.0
author:             Edsko de Vries
maintainer:         edsko@well-typed.com

library
  exposed-modules:
      SayYes
  build-depends:
      base
    , ghc
    , syb
    , template-haskell
  hs-source-dirs:
      lib
  default-language:
      Haskell2010
  ghc-options:
      -Wall

executable hls-plugin-integration
  main-is:
      Main.hs
  build-depends:
      base
    , hls-plugin-integration
  hs-source-dirs:
      app
  default-language:
      Haskell2010
